--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,8 @@
 [build]
   base = "frontend"
-  command = "npm install && npm run build"
+  command = "CI=false npm install && CI=false npm run build"
   publish = "build"
+  environment = { NODE_VERSION = "18" }
 
 [[redirects]]
   from = "/*"
