--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,10 @@
   base = "frontend"
   command = "CI=false npm install && CI=false npm run build"
   publish = "build"
-  environment = { NODE_VERSION = "18" }
+
+[build.environment]
+  CI = "false"
+  NODE_VERSION = "18"
 
 [[redirects]]
   from = "/*"
